# file-manager

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
api-docs/: bruno.json  collection.bru
api-docs/cluster/: Cluster Status.bru  Health Check.bru  folder.bru
api-docs/files/: Create File.bru  Delete File.bru  Download File.bru  Get File.bru  List Files.bru  Update File.bru  folder.bru
e2e/: cluster.hurl  files.hurl  sample.txt
src/: config.rs  lib.rs  main.rs  state_machine.rs  testutil.rs
src/api/: mod.rs  response.rs  routes.rs
src/api/handlers/: admin.rs  files.rs  mod.rs  static_files.rs
src/object_store/: gcs.rs  local.rs  mod.rs
src/storage/: db.rs  files.rs  mod.rs  models.rs  tables.rs
tests/: object_store_tests.rs  storage_tests.rs
