[package]
name = "file-manager"
version = "0.1.0"
edition = "2021"
description = "A unified internal API for file storage and CMS-like file management"
license = "MIT"

[lib]
name = "file_manager"
path = "src/lib.rs"

[[bin]]
name = "file-manager"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["multipart"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
muster = { git = "https://github.com/hpopp/muster.git", tag = "v0.1.0" }
redb = "2"
ring = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-stackdriver = "0.10"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3"
